# DTOs/AppointmentLocationInfo.java
@@ -1,0 +1,93 @@
+package com.ps.tenbridge.datahub.dto;
+
+import java.io.Serializable;
+
+public class AppointmentLocationInfo implements Serializable {
+
+	/**
+	 * 
+	 */
+	private static final long serialVersionUID = 4120810754532551752L;
+	private int locationId;
+	private String abbreviation;
+	private String locationAbbreviation;
+	private String listName;
+	private String address1;
+	private String address2;
+	private String city;
+	private String state;
+	private String zip;
+
+	// Getters and Setters
+	public int getLocationId() {
+		return locationId;
+	}
+
+	public void setLocationId(int locationId) {
+		this.locationId = locationId;
+	}
+
+	public String getAbbreviation() {
+		return abbreviation;
+	}
+
+	public void setAbbreviation(String abbreviation) {
+		this.abbreviation = abbreviation;
+	}
+
+	public String getLocationAbbreviation() {
+		return locationAbbreviation;
+	}
+
+	public void setLocationAbbreviation(String locationAbbreviation) {
+		this.locationAbbreviation = locationAbbreviation;
+	}
+
+	public String getListName() {
+		return listName;
+	}
+
+	public void setListName(String listName) {
+		this.listName = listName;
+	}
+
+	public String getAddress1() {
+		return address1;
+	}
+
+	public void setAddress1(String address1) {
+		this.address1 = address1;
+	}
+
+	public String getAddress2() {
+		return address2;
+	}
+
+	public void setAddress2(String address2) {
+		this.address2 = address2;
+	}
+
+	public String getCity() {
+		return city;
+	}
+
+	public void setCity(String city) {
+		this.city = city;
+	}
+
+	public String getState() {
+		return state;
+	}
+
+	public void setState(String state) {
+		this.state = state;
+	}
+
+	public String getZip() {
+		return zip;
+	}
+
+	public void setZip(String zip) {
+		this.zip = zip;
+	}
+}
